Add fonts and logo for hero page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Jeanne Ferrer: Portfolio</title>
-        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <title>Jeanne Ferrer</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
+        <header>
+            <div>
+                <img src="assets/images/logo.png" alt="Logo on header">
+                <p class="nav-header">Jeanne Ferrer</p>
+            </div>
+        </header>
 
+        <div>
+            <div>
+                <div>
+                    <img src="assets/images/logo.png" alt="Logo on hero">
+                    <h1>Jeanne Ferrer</h1>
+                </div>
+                <p>Undergrad, Bachelor of Science in Computer Science  - Photographer</p>
+            </div>
+
+            <div>
+                <a href="" class="portfolio-link">About Me</a>
+                <a href="" class="portfolio-link">Projects</a>
+                <a href="" class="portfolio-link">Photography</a>
+                <div>
+                    <!--
+                    FaceBook
+                    LinkedIn
+                    Instagram
+                    GitHub
+                    Email
+                    -->
+                </div>
+            </div>
+        </div>
     </body>
 </html>
