Fix welcome hero section

--- a/index.html
+++ b/index.html
@@ -2,38 +2,39 @@
 <html>
     <head>
         <title>Jeanne Ferrer</title>
+        <link rel="icon" href="./assets/images/logo.png">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <header>
-            <div>
-                <img src="assets/images/logo.png" alt="Logo on header">
-                <p class="nav-header">Jeanne Ferrer</p>
+            <div class="header-logo">
+                <img src="assets/images/logo.png" alt="Logo on header" class="nav-logo">
+                <p class="nav-heading">Jeanne Ferrer</p>
             </div>
         </header>
 
-        <div>
-            <div>
+        <div id="welcome-hero">
+            <div id="welcome-hero-left">
                 <div>
                     <img src="assets/images/logo.png" alt="Logo on hero">
                     <h1>Jeanne Ferrer</h1>
                 </div>
-                <p>Undergrad, Bachelor of Science in Computer Science  - Photographer</p>
+                <p>Undergrad, Bachelor of Science in Computer Science • Photographer</p>
             </div>
 
-            <div>
+            <div id="welcome-hero-right">
                 <a href="" class="portfolio-link">About Me</a>
-                <a href="" class="portfolio-link">Projects</a>
-                <a href="" class="portfolio-link">Photography</a>
-                <div>
-                    <!--
-                    FaceBook
-                    LinkedIn
-                    Instagram
-                    GitHub
-                    Email
-                    -->
-                </div>
+                    <a href="" class="portfolio-link">Projects</a>
+                    <a href="" class="portfolio-link">Photography</a>
+                    <div>
+                        <!--
+                        FaceBook
+                        LinkedIn
+                        Instagram
+                        GitHub
+                        Email
+                        -->
+                    </div>
             </div>
         </div>
     </body>
