Edit css and add meta tags

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>Jeanne Ferrer</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="This website showcases Jeanne Ferrer's portfolio.">
         <link rel="icon" href="./assets/images/logo.png">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
