--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <body>
         <header>
             <div class="header-logo">
-                <img src="assets/images/logo.png" alt="Logo on header" class="nav-logo">
-                <p class="nav-heading">Jeanne Ferrer</p>
+                <a href="./index.html"><img src="assets/images/logo.png" alt="Logo on header" class="nav-logo"></a>
+                <a href="./index.html" class="nav-heading">Jeanne Ferrer</a>
             </div>
         </header>
 
-        <div id="welcome-hero">
+        <main id="welcome-hero">
             <div id="welcome-hero-left">
                 <div>
                     <img src="assets/images/logo.png" alt="Logo on hero">
@@ -26,19 +26,21 @@
             </div>
 
             <div id="welcome-hero-right">
-                <a href="" class="portfolio-link">About Me</a>
-                    <a href="" class="portfolio-link">Projects</a>
-                    <a href="" class="portfolio-link">Photography</a>
-                    <div>
-                        <!--
-                        FaceBook
-                        LinkedIn
-                        Instagram
-                        GitHub
-                        Email
-                        -->
-                    </div>
+                <a href="./about-me-page.html" class="portfolio-link">About Me</a>
+                <a href="" class="portfolio-link">Projects</a>
+                <a href="" class="portfolio-link">Photography</a>
+                <div class="social-links">
+                    <a href="https://www.facebook.com/adi.ferrer.33/" class="social-link" target="_blank"><img src="./assets/images/icons/facebook.svg" alt="FaceBook Icon"></a>
+                    <a href="https://www.instagram.com/takenbyadi" class="social-link" target="_blank"><img src="./assets/images/icons/instagram.svg" alt="Instagram Icon"></a>
+                    <a href="https://www.linkedin.com/in/jeanne-ferrer-496a021aa/" class="social-link" target="_blank"><img src="./assets/images/icons/linkedin.svg" alt="LinkedIn Icon"></a>
+                    <a href="mailto:adiferrer@gmail.com" class="social-link" target="_blank"><img src="./assets/images/icons/mail.svg" alt="Mail Icon"></a>
+                    <a href="https://github.com/jeanneferrer" class="social-link" target="_blank"><img src="./assets/images/icons/github.svg" alt="GitHub Icon"></a>
+                </div>
             </div>
-        </div>
+        </main>
+
+        <footer>
+            <p class="footer-credit">&copy; Jeanne Ferrer, 2024</p>
+        </footer>
     </body>
 </html>
